# abyo-speculate

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  BLOG_DRAFT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md  abyo_speculate_plan.md
.github/workflows/: ci.yml
crates/speculate/: Cargo.toml
crates/speculate-cli/: Cargo.toml
crates/speculate/examples/: eagle2_bf16.rs  simple_generate.rs  vanilla_sd_streaming.rs
crates/speculate/src/: device.rs  engine.rs  error.rs  lib.rs  presets.rs  tree.rs
crates/speculate/src/cache/: mod.rs  rollback.rs
crates/speculate/src/methods/: eagle.rs  eagle3.rs  medusa.rs  mod.rs  vanilla.rs
crates/speculate/src/model/: hub.rs  llama.rs  llama_local.rs  loader.rs  mock.rs  mod.rs  phi3.rs  phi3_local.rs  quantized_llama.rs  quantized_llama_local.rs  quantized_qwen2.rs  quantized_qwen2_local.rs  qwen2.rs  qwen2_local.rs
crates/speculate/src/sampling/: mod.rs  tokens.rs
crates/speculate/tests/: tree_logits_consistency.rs  with_eagle3_e2e.rs  with_eagle3_skeleton.rs  with_eagle_bf16_e2e.rs  with_eagle_e2e.rs  with_eagle_skeleton.rs  with_eagle_via_engine.rs  with_phi3_mini.rs  with_qwen2_05b.rs  with_qwen2_q4_cross_dtype.rs  with_real_medusa_e2e.rs  with_real_medusa_heads.rs  with_tinyllama.rs
scripts/: convert_pth_to_safetensors.py  run_benchmarks.sh
