[workspace]
resolver = "2"
members = [
    "crates/speculate",
    "crates/speculate-cli",
]

[workspace.package]
version = "0.5.0"
authors = ["abyo software, LLC"]
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/abyo-software/abyo-speculate"
homepage = "https://github.com/abyo-software/abyo-speculate"
readme = "README.md"
keywords = ["llm", "speculative-decoding", "inference", "candle", "medusa"]
categories = ["science", "text-processing"]

[workspace.dependencies]
# Inference backend
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }

# Tokenization
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Model download (sync API via ureq — `tokio` feature is async-only).
# 0.4+ fixed a URL-parse bug for 307 redirects from huggingface.co; that
# release also renamed the sync-only feature from `online` to `ureq`.
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }

# Async / runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# RNG (rejection sampling)
rand = "0.8"
rand_distr = "0.4"

# Bench / metrics
indicatif = "0.17"

# Test utilities
approx = "0.5"
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
